--- a/mos.yml
+++ b/mos.yml
@@ -13,7 +13,7 @@ libs:
 
 config_schema:
   - ["lolin_button", "o", {"title": "LoLin I2C buttont sensor settings"}]
-  - ["lolin_button.enable", "b", true, {"title": "Enable the buttont"}]
+  - ["lolin_button.enable", "b", false, {"title": "Enable the buttont"}]
   - ["lolin_button.i2c_bus", "i", 0, {"title": "I2C bus number"}]
   - ["lolin_button.i2c_addr", "i", 0x31, {"title": "I2C device address, 0x31 is the default"}]
   - ["lolin_button.poll_interval_ms", "i", 100, {"title": "Poll interval for the button"}]
